# Rust_1724

./: README.md  directoryList.md  finalReport.md  prompt.md
Backend/rust_gpt/: .env  Cargo.toml  users.json
Backend/rust_gpt/src/: config.rs  db.rs  main.rs  types.rs
Backend/rust_gpt/src/account/: login.rs  register.rs
Backend/rust_gpt/src/config/: config.toml
Backend/rust_gpt/src/openai/: client.rs
Backend/rust_gpt/src/prompt/: agent_background.txt
Backend/rust_gpt/src/steps/: handler.rs
Frontend/: Cargo.toml  index.html  trunk.toml
Frontend/src/: lib.rs  main.rs  types.rs
Frontend/src/components/: header.rs
Frontend/src/components/sidebar/: history.rs  mod.rs  sidebar.rs  steps.rs
Frontend/src/pages/: mod.rs
Frontend/src/pages/about_us/: about_us.rs  mod.rs
Frontend/src/pages/create_account_page/: create_account_page.rs  mod.rs
Frontend/src/pages/final_step_page/: final_step_page.rs  mod.rs
Frontend/src/pages/first_step_page/: first_step_page.rs  mod.rs
Frontend/src/pages/history_page/: history_page.rs  mod.rs
Frontend/src/pages/home_page/: content_section.rs  mod.rs
Frontend/src/pages/login_page/: login.rs
Frontend/src/pages/second_step_page/: mod.rs  second_step_page.rs
Frontend/src/pages/third_step_page/: mod.rs  third_step_page.rs
Frontend/src/pages/user_check_page/: mod.rs  user_check_page.rs
Frontend/static/: styles.css
