[package]
name = "coverdraft"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
anyhow = "1.0"
console_error_panic_hook = "0.1"
console = "0.15"
web-sys = { version = "0.3", features = ["console"] }
chrono = "0.4"
yewdux = "0.9"