[package]
name = "coverdraft"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
log = "0.4"
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }

[[bin]]
name = "coverdraft-bin"
path = "src/main.rs"

[lib]
name = "coverdraft"
crate-type = ["cdylib", "rlib"]
