[package]
name = "rust_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
actix-web = "4.0"
actix-cors = "0.6"
env_logger = "0.9"
actix-files = "0.6"